Fix horizontal spacing of the recipe cards
Why: To make the image cards spaced out evenly

How: By using display: flex and space evenly

--- a/styles/mainpage.css
+++ b/styles/mainpage.css
@@ -1,6 +1,6 @@
-/* * {
+* {
     border: 2px red solid;
-} */
+}
 
 body {
     background-color: #e0dfdf;
@@ -24,6 +24,7 @@ Recipe card styling
 
 .recipeCardContainer {
     display: flex;
+    justify-content: space-evenly;
 
 }
 
